--- a/nicolasgoguillon/index.html
+++ b/nicolasgoguillon/index.html
@@ -100,7 +100,7 @@
                 <img class="foxseparateur" src="iconfox2.png" alt="fox">
                 <!-- About Section Content-->
                 <div class="row">
-                    <div class="textejustifie col-lg-4 ms-auto"><p class="lead">Je suis un étudiant en informatique, actuellement en deuxième année de DUT à l'IUT de Lens. Je suis très intéressé par le développement web et tous ses aspects, langages et technologies. Je code en front end comme en back end. Vous pouvez retrouver mes différents projets en informatiques dans la section ci-dessous.</p></div>
+                    <div class="textejustifie col-lg-4 ms-auto"><p class="lead">Je suis un étudiant en informatique, actuellement en deuxième année de DUT à l'IUT de Lens. Je suis très intéressé par le développement web et tous ses aspects, langages et technologies. Je code en front end comme en back end. Vous pouvez retrouver mes différents projets en informatique dans la section ci-dessous.</p></div>
                     <div class="textejustifie col-lg-4 me-auto"><p class="lead">Mes passions sont le développement web, la technologie, la musique, la lecture et le domaine du jeu vidéo. <br><br>Vous pouvez télécharger mon CV en français et en anglais ci-dessous. N'hésitez pas à me contacter pour tout renseignement !</p></div>
                 </div>
                 <!-- About Section Button-->
