--- a/nicolasgoguillon/index.html
+++ b/nicolasgoguillon/index.html
@@ -70,6 +70,10 @@
         <header class="masthead fondturquoise bg-primary text-white text-center">
             <div class="container fondturquoise d-flex align-items-center flex-column">
                 <!-- Masthead Avatar Image-->
+                <div class"=espacephoto">
+                    <br>
+                    <br>
+                </div>
                 <img class="profilepic masthead-avatar mb-5" src="profilepic.png" alt="profilepic" />
                 <!-- Masthead Heading-->
                 <h1 class="masthead-heading policeraleway text-uppercase mb-0">NICOLAS GOGUILLON</h1>
