--- a/nicolasgoguillon/index.html
+++ b/nicolasgoguillon/index.html
@@ -94,7 +94,7 @@
         <section class="page-section fondblanc text-black mb-0" id="about">
             <div class="container">
                 <!-- About Section Heading-->
-                <h2 class="page-section-heading text-center text-uppercase text-black">A propos de moi</h2>
+                <h2 class="page-section-heading text-center text-uppercase policeraleway text-black">A propos de moi</h2>
                 <!-- Icon Divider-->
                 <div class="divider-custom divider-light">
                     
@@ -123,7 +123,7 @@
 <section class="page-section bg-primary text-white mb-0" id="formation">
     <div class="timeline-div">
         <!-- About Section Heading-->
-        <h2 class="page-section-heading text-center text-uppercase text-white">Mon parcours</h2>
+        <h2 class="page-section-heading text-center policeraleway text-uppercase text-white">Mon parcours</h2>
 
 </section>
 
@@ -196,7 +196,7 @@
 <!-- Formation Section-->
 <section class="page-section bg-primary text-white mb-0" id="formation">
 <!-- About Section Heading-->
-<h2 class="page-section-heading text-center text-uppercase text-white">Mes projets</h2>
+<h2 class="page-section-heading text-center text-uppercase policeraleway text-white">Mes projets</h2>
 
 </section>
 
@@ -293,7 +293,7 @@
         <section class="fondturquoise page-section" id="contact">
             <div class="container">
                 <!-- Contact Section Heading-->
-                <h2 class="policeblanche page-section-heading text-center text-uppercase text-secondary mb-0">Contactez-moi !</h2>
+                <h2 class="policeblanche page-section-heading text-center policeraleway text-uppercase text-secondary mb-0">Contactez-moi !</h2>
                 <!-- Icon Divider-->
                 <div class="divider-custom divider-light">
                     
