--- a/nicolasgoguillon/index.html
+++ b/nicolasgoguillon/index.html
@@ -55,8 +55,8 @@
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item mx-0 mx-lg-1"><a class="nav-link policeralewaydots py-3 px-0 px-lg-3 rounded" href="#about">A propos de moi</a></li>
-                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link policeralewaydots py-3 px-0 px-lg-3 rounded" href="#formation">Mon parcours</a></li>
-                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link policeralewaydots py-3 px-0 px-lg-3 rounded" href="#portfolio">Mes projets</a></li>
+                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link policeralewaydots py-3 px-0 px-lg-3 rounded" href="#parcours">Mon parcours</a></li>
+                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link policeralewaydots py-3 px-0 px-lg-3 rounded" href="#projets">Mes projets</a></li>
                         <li class="nav-item mx-0 mx-lg-1"><a class="nav-link policeralewaydots py-3 px-0 px-lg-3 rounded" href="#contact">Contactez moi</a></li>
                     </ul>
                 </div>
@@ -120,7 +120,7 @@
         
 
 <!-- Formation Section-->
-<section class="page-section bg-primary text-white mb-0" id="formation">
+<section class="page-section bg-primary text-white mb-0" id="parcours">
     <div class="timeline-div">
         <!-- About Section Heading-->
         <h2 class="page-section-heading text-center policeraleway text-uppercase text-white">Mon parcours</h2>
@@ -194,7 +194,7 @@
 </section>
 
 <!-- Formation Section-->
-<section class="page-section bg-primary text-white mb-0" id="formation">
+<section class="page-section bg-primary text-white mb-0" id="projets">
 <!-- About Section Heading-->
 <h2 class="page-section-heading text-center text-uppercase policeraleway text-white">Mes projets</h2>
 
