--- a/nicolasgoguillon/index.html
+++ b/nicolasgoguillon/index.html
@@ -213,6 +213,9 @@
                 <!-- Icon Divider-->
                              <!-- Icon Divider-->
                 
+                             <h5 class="policenoire">Cliquez sur les différentes icones pour découvrir mes divers projets !</h5>
+                             <br>
+                             <br>
                 <!-- Portfolio Grid Items-->
                 <div class="row justify-content-center">
                     <!-- Portfolio Item 1-->
