--- a/nicolasgoguillon/index.html
+++ b/nicolasgoguillon/index.html
@@ -161,6 +161,10 @@
     <p class="etxt">Validation du 1er semestre de DUT informatique</p>
   </div>
   <div class="event">
+    <strong class="edate">Février 2021 à aujourd'hui</strong>
+    <p class="etxt">Réalisation régulières de missions d'intérim, principalement en tant qu'inventoriste avec l'entreprise Ivalis</p>
+  </div>
+  <div class="event">
     <strong class="edate">Novembre à Décembre 2020</strong>
     <p class="etxt">Projet : portail national des IUT informatique</p>
   </div>
