--- a/nicolasgoguillon/index.html
+++ b/nicolasgoguillon/index.html
@@ -162,7 +162,7 @@
   </div>
   <div class="event">
     <strong class="edate">Février 2021 à aujourd'hui</strong>
-    <p class="etxt">Réalisation régulières de missions d'intérim, principalement en tant qu'inventoriste avec l'entreprise Ivalis</p>
+    <p class="etxt">Réalisation régulière de missions d'intérim, principalement en tant qu'inventoriste avec l'entreprise Ivalis</p>
   </div>
   <div class="event">
     <strong class="edate">Novembre à Décembre 2020</strong>
