--- a/nicolasgoguillon/index.html
+++ b/nicolasgoguillon/index.html
@@ -45,19 +45,19 @@
 
 
         <!-- Navigation-->
-        <nav class="navbar fondgrisvert navbar-expand-lg bg-secondary text-uppercase fixed-top" id="mainNav">
+        <nav class="navbar fondgris navbar-expand-lg bg-secondary text-uppercase fixed-top" id="mainNav">
             <div class="container">
                 <a class="navbar-brand policeralewaydots" href="#page-top">Nicolas Goguillon</a>
-                <button class="navbar-toggler fondturquoise text-uppercase font-weight-bold bg-primary text-white rounded" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+                <button class="navbar-toggler fondbleu text-uppercase font-weight-bold text-white rounded" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                     Menu
                     <i class="fas fa-bars"></i>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto">
-                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link policeralewaydots py-3 px-0 px-lg-3 rounded" href="#about">A propos de moi</a></li>
-                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link policeralewaydots py-3 px-0 px-lg-3 rounded" href="#parcours">Mon parcours</a></li>
-                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link policeralewaydots py-3 px-0 px-lg-3 rounded" href="#projets">Mes projets</a></li>
-                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link policeralewaydots py-3 px-0 px-lg-3 rounded" href="#contact">Contactez moi</a></li>
+                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link policeralewaydots py-3 px-0 px-lg-3 rounded menuhover" href="#about">A propos de moi</a></li>
+                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link policeralewaydots py-3 px-0 px-lg-3 rounded menuhover" href="#parcours">Mon parcours</a></li>
+                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link policeralewaydots py-3 px-0 px-lg-3 rounded menuhover" href="#projets">Mes projets</a></li>
+                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link policeralewaydots py-3 px-0 px-lg-3 rounded menuhover" href="#contact">Contactez moi</a></li>
                     </ul>
                 </div>
             </div>
@@ -67,8 +67,8 @@
 
 
         <!-- Masthead-->
-        <header class="masthead fondturquoise bg-primary text-white text-center">
-            <div class="container fondturquoise d-flex align-items-center flex-column">
+        <header class="masthead fondbleu text-white text-center">
+            <div class="container fondbleu d-flex align-items-center flex-column">
                 <!-- Masthead Avatar Image-->
                 <div class"=espacephoto">
                     <br>
@@ -120,10 +120,10 @@
         
 
 <!-- Formation Section-->
-<section class="page-section bg-primary text-white mb-0" id="parcours">
+<section class="page-section fondbleu text-white mb-0" id="parcours">
     <div class="timeline-div">
         <!-- About Section Heading-->
-        <h2 class="page-section-heading text-center policeraleway text-uppercase text-white">Mon parcours</h2>
+        <h2 class="page-section-heading fondbleu text-center policeraleway text-uppercase text-white">Mon parcours</h2>
 
 </section>
 
@@ -198,9 +198,9 @@
 </section>
 
 <!-- Formation Section-->
-<section class="page-section bg-primary text-white mb-0" id="projets">
+<section class="page-section fondbleu text-white mb-0" id="projets">
 <!-- About Section Heading-->
-<h2 class="page-section-heading text-center text-uppercase policeraleway text-white">Mes projets</h2>
+<h2 class="page-section-heading fondbleu text-center text-uppercase policeraleway text-white">Mes projets</h2>
 
 </section>
 
@@ -297,7 +297,7 @@
 
 
         <!-- Contact Section-->
-        <section class="fondturquoise page-section" id="contact">
+        <section class="fondbleu page-section" id="contact">
             <div class="container">
                 <!-- Contact Section Heading-->
                 <h2 class="policeblanche page-section-heading text-center policeraleway text-uppercase text-secondary mb-0">Contactez-moi !</h2>
@@ -329,8 +329,8 @@
 
 
         <!-- Footer-->
-        <footer class="footer text-center">
-            <div class="container">
+        <footer class="fondgris footer text-center">
+            <div class="container fondgris">
                 <div class="row">
                     <!-- Footer Location-->
                     <div class="col-lg-4 mb-5 mb-lg-0">
