--- a/nicolasgoguillon/index.html
+++ b/nicolasgoguillon/index.html
@@ -337,7 +337,7 @@
                         <h4 class="text-uppercase mb-4">IUT de Lens</h4>
                         <p class="lead mb-0">
                             Portfolio réalisé dans le cadre de mes études à
-                            <a href="http://www.iut-lens.univ-artois.fr/">l'IUT de Lens</a>
+                            <a class="bleuclair" href="http://www.iut-lens.univ-artois.fr/">l'IUT de Lens</a>
                         </p>
                     </div>
                     <!-- Footer Social Icons-->
