--- a/nicolasgoguillon/index.html
+++ b/nicolasgoguillon/index.html
@@ -310,7 +310,7 @@
             <br>
 
 
-            <h5>Vous pouvez me contacter via le numéro de téléphone ou l'adresse mail présents sur mon CV, disponible sur ce site, ou directement sur mon <a href="https://www.linkedin.com/in/nicolas-goguillon/" style="color:#313D39">profil LinkedIn</a> !</h5>
+            <h5>Vous pouvez me contacter via le numéro de téléphone ou l'adresse mail présents sur mon CV, disponible sur ce site, ou directement sur mon <a href="https://www.linkedin.com/in/nicolas-goguillon/" class="bleuclair">profil LinkedIn</a> !</h5>
             <br>
             <div>
                 <a class="pdf" href="CV_Nicolas_Goguillon_Public.pdf" download><span>Download</span><span>CV français</span></a>
