--- a/anglais.html
+++ b/anglais.html
@@ -46,7 +46,7 @@
 
 
         <!-- Navigation-->
-        <nav class="navbar fondgris navbar-expand-lg bg-secondary text-uppercase fixed-top" id="mainNav">
+        <nav class="navbar fondgris navbar-expand-lg bg-secondary text-uppercase fixed-top shadow" id="mainNav">
             <div class="container">
                 <a class="navbar-brand policeralewaydots" href="#page-top">Nicolas Goguillon</a>
                 <button class="navbar-toggler fondbleu text-uppercase font-weight-bold text-white rounded" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
