--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
             <br>
 
 
-            <h5>Vous pouvez me contacter via le numéro de téléphone ou l'adresse mail présents sur mon CV, disponible sur ce site, ou directement sur mon <a href="https://www.linkedin.com/in/nicolas-goguillon/" class="bleuclair">profil LinkedIn</a> !</h5>
+            <h5>Vous pouvez me contacter directement sur <a href="https://www.linkedin.com/in/nicolas-goguillon/" class="bleuclair">LinkedIn</a> ou via les coordonnées présentes sur mon cv !</h5>
             <br>
             <div>
                 <a class="pdf" href="CV_Nicolas_Goguillon_Public.pdf" download><span>Download</span><span>CV français</span></a>
