modifs section parcours
raccourcissement de la timeline, et ajout d'un paragraphe introductif

--- a/index.html
+++ b/index.html
@@ -168,45 +168,27 @@
     <div class="timeline-div">
         <!-- About Section Heading-->
 
+        <h5 class="precision policenoire">Vous trouverez ici un résumé de mon parcours scolaire, de mes diplômes et de mes expériences professionnelles. Pour en savoir plus sur mes projets en informatique, vous pouvez consulter la section <a href="#projets">mes projets</a> du portfolio !</h5>
 
         <div class="timelinetest">
 <div class="vtl">
-  <div class="event">
-    <strong class="edate">Décembre 2021</strong>
-    <p class="etxt">Projet : marathon Web</p>
-  </div>
+  
   <div class="event">
     <strong class="edate">Août 2021</strong>
     <p class="etxt">Emploi saisonnier d'assistant au conseil départemental du Pas-de-Calais</p>
   </div>
-  <div class="event">
-    <strong class="edate">Juin 2021</strong>
-    <p class="etxt">Validation du 2e Semestre de DUT informatique</p>
-  </div>
+  
   <div class="event">
     <strong class="edate">Juin 2021</strong>
     <p class="etxt">Validation de la certification Voltaire avec un score de 771 (niveau affaire - CSCV : DM9MNC)</p>
   </div>
-  <div class="event">
-    <strong class="edate">Mai à Juin 2021</strong>
-    <p class="etxt">Projet : Sokoban</p>
-  </div>
-  <div class="event">
-    <strong class="edate">Avril à Juin 2021</strong>
-    <p class="etxt">Projet : Labyrinthe</p>
-  </div>
-  <div class="event">
-    <strong class="edate">Février 2021</strong>
-    <p class="etxt">Validation du 1er semestre de DUT informatique</p>
-  </div>
+  
+  
   <div class="event">
     <strong class="edate">Février 2021 à aujourd'hui</strong>
     <p class="etxt">Réalisation régulière de missions d'intérim, principalement en tant qu'inventoriste avec l'entreprise Ivalis</p>
   </div>
-  <div class="event">
-    <strong class="edate">Novembre à Décembre 2020</strong>
-    <p class="etxt">Projet : portail national des IUT informatique</p>
-  </div>
+  
   <div class="event">
     <strong class="edate">Septembre 2020</strong>
     <p class="etxt">Entrée à l'IUT de Lens, en DUT informatique</p>
