--- a/index.html
+++ b/index.html
@@ -47,18 +47,18 @@
         <!-- Navigation-->
         <nav class="navbar fondgris navbar-expand-lg bg-secondary text-uppercase fixed-top shadow" id="mainNav">
             <div class="container">
-                <a class="navbar-brand policeralewaydots" href="#page-top">Nicolas Goguillon</a>
+                <a class="navbar-brand policeraleway" href="#page-top">Nicolas Goguillon</a>
                 <button class="navbar-toggler fondbleu text-uppercase font-weight-bold text-white rounded" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                     Menu
                     <i class="fas fa-bars"></i>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto">
-                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link policeralewaydots py-3 px-0 px-lg-3 rounded menuhover" href="#about">A propos de moi</a></li>
-                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link policeralewaydots py-3 px-0 px-lg-3 rounded menuhover" href="#parcours">Mon parcours</a></li>
-                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link policeralewaydots py-3 px-0 px-lg-3 rounded menuhover" href="#projets">Mes projets</a></li>
-                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link policeralewaydots py-3 px-0 px-lg-3 rounded menuhover" href="#contact">Contactez moi</a></li>
-                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link policeralewaydots py-3 px-0 px-lg-3 rounded menuhover" href="anglais.html">English version</a></li>
+                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link policeraleway py-3 px-0 px-lg-3 rounded menuhover" href="#about">A propos de moi</a></li>
+                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link policeraleway py-3 px-0 px-lg-3 rounded menuhover" href="#parcours">Mon parcours</a></li>
+                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link policeraleway py-3 px-0 px-lg-3 rounded menuhover" href="#projets">Mes projets</a></li>
+                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link policeraleway py-3 px-0 px-lg-3 rounded menuhover" href="#contact">Contactez moi</a></li>
+                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link policeraleway py-3 px-0 px-lg-3 rounded menuhover" href="anglais.html">English version</a></li>
    
                     </ul>
                 </div>
