Mise à jour de la page en anglais

--- a/index.html
+++ b/index.html
@@ -172,7 +172,14 @@
 
         <div class="timelinetest">
 <div class="vtl">
-  
+
+
+    <div class="event">
+        <strong class="edate">Mai à Juillet 2022</strong>
+        <p class="etxt">Stage en développement web à l'IEMN, dans le département informatique. Développement d'une application web de gestion des projets du réseau Renatech à l'échelle nationale.<</p>
+      </div>
+
+
   <div class="event">
     <strong class="edate">Août 2021</strong>
     <p class="etxt">Emploi saisonnier d'assistant au conseil départemental du Pas-de-Calais</p>
@@ -650,6 +657,8 @@
                             <!-- Portfolio Modal - Image-->
                             <img class="img-fluid rounded mb-5" src="assets/img/portfolio/agiliutdetails.png" alt="..." />
                             <!-- Portfolio Modal - Text-->
+                            <h3 class="dateportfolio policeraleway">Avril 2022</h3>
+
                             <p class="policenoire">Projet Agil'IUT : projet de deux jours de réalisation d'un site de jeu basé sur les règles du jeu télé "Burger Quiz", en suivant la méthode agile et par groupes de 6.</p>
                             
                         </div>
