--- a/anglais.html
+++ b/anglais.html
@@ -107,8 +107,8 @@
                 <img class="foxseparateur" src="iconfox2.png" alt="fox">
                 <!-- About Section Content-->
                 <div class="row">
-                    <div class="textejustifie col-lg-4 ms-auto"><p class="lead">I am a web developer who studied and graduated at the Lens University in France. I specialize in web development in Python, with Python-Flask as my preferred framework. I am currently on fixed-term contract in the IT department of the IEMN in Villeneuve d'Ascq.</p></div>
-                    <div class="textejustifie col-lg-4 me-auto"><p class="lead">My passions are web development, technology, music, reading and the field of video games. <br><br>You can download my CV in French and English below. Do not hesitate to contact me for further information !</p></div>
+                    <div class="textejustifie col-lg-4 ms-auto"><p class="lead">I am a web developer who studied and graduated from Lens University in France. I'm specialized in web development in Python, with Python-Flask as my preferred framework. I am currently on fixed-term contract in the IT department of the IEMN in Villeneuve d'Ascq.</p></div>
+                    <div class="textejustifie col-lg-4 me-auto"><p class="lead">My hobbies are web development, technology, music, reading and video games. <br><br>You can download my CV in French and English below. Do not hesitate to contact me for further information !</p></div>
                 </div>
                 <!-- About Section Button-->
                
@@ -170,7 +170,7 @@
     <div class="timeline-div">
         <!-- About Section Heading-->
 
-        <h5 class="precision policenoire">You will find here a summary of my educational background, my diplomas and my professional experiences. To know more about my projects in computer science, you can consult the section <a href="#projets">my projects</a> of the website !</h5>
+        <h5 class="precision policenoire">You will find here a summary of my educational background, my diplomas and my professional experiences. To learn more about my projects in computer science, you can consult the section <a href="#projets">my projects</a> of the website !</h5>
 
         <div class="timelinetest">
 <div class="vtl">
