--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <nav class="navbar fondgris navbar-expand-lg bg-secondary text-uppercase fixed-top shadow" id="mainNav">
             <div class="container">
                 <a class="navbar-brand policeraleway" href="#page-top">Nicolas Goguillon</a>
-                <button class="navbar-toggler fondbleu text-uppercase font-weight-bold text-white rounded" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+                <button class="navbar-toggler fondbleu text-uppercase font-weight-bold text-white rounded" type="button" style="border: none ;" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                     Menu
                     <i class="fas fa-bars"></i>
                 </button>
@@ -70,7 +70,7 @@
 
         <!-- Masthead-->
         <header class="masthead fondbleu text-white text-center">
-            <div class="container fondbleu d-flex align-items-center flex-column">
+            <div class="container d-flex align-items-center flex-column">
                 <!-- Masthead Avatar Image-->
                 <div class"=espacephoto">
                     <br>
@@ -158,7 +158,7 @@
 <section class="page-section fondbleu text-white mb-0" id="parcours">
     <div class="timeline-div">
         <!-- About Section Heading-->
-        <h2 class="page-section-heading fondbleu text-center policeraleway text-uppercase text-white">Mon parcours</h2>
+        <h2 class="page-section-heading text-center policeraleway text-uppercase text-white">Mon parcours</h2>
 
 </section>
 
@@ -168,7 +168,7 @@
     <div class="timeline-div">
         <!-- About Section Heading-->
 
-        <h5 class="precision policenoire">Vous trouverez ici un résumé de mon parcours scolaire, de mes diplômes et de mes expériences professionnelles. Pour en savoir plus sur mes projets en informatique, vous pouvez consulter la section <a href="#projets">mes projets</a> du portfolio !</h5>
+        <h5 class="precision policenoire">Vous trouverez ici un résumé de mon parcours scolaire, de mes diplômes et de mes expériences professionnelles. Pour en savoir plus sur mes projets en informatique, vous pouvez consulter la section <a href="#projets" style="color:rgb(171, 5, 243) ;">mes projets</a> du portfolio !</h5>
 
         <div class="timelinetest">
 <div class="vtl">
@@ -238,7 +238,7 @@
 <!-- Formation Section-->
 <section class="page-section fondbleu text-white mb-0" id="projets">
 <!-- About Section Heading-->
-<h2 class="page-section-heading fondbleu text-center text-uppercase policeraleway text-white">Mes projets</h2>
+<h2 class="page-section-heading text-center text-uppercase policeraleway text-white">Mes projets</h2>
 
 </section>
 
