--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                     
                 </div>
                 <!-- Masthead Subheading-->
-                <p class="masthead-subheading policeraleway font-weight-light mb-0">Développeur web - Frontend / backend</p>
+                <p class="masthead-subheading policeraleway font-weight-light mb-0">Développeur Web - Frontend / backend</p>
             </div>
         </header>
 
