--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                 <img class="foxseparateur" src="iconfox2.png" alt="fox">
                 <!-- About Section Content-->
                 <div class="row">
-                    <div class="textejustifie col-lg-4 ms-auto"><p class="lead">Je suis développeur web diplômé d'un DUT informatique après deux ans à l'IUT de Lens. Je suis spécialisé en développement web en Python, avec comme framework de prédilection Python-Flask. Je suis actuellement en CDD dans le service informatique de l'IEMN de Villeneuve d'Ascq.</p></div>
+                    <div class="textejustifie col-lg-4 ms-auto"><p class="lead">Je suis développeur web diplômé d'un DUT informatique après deux ans à l'IUT de Lens. Je me suis spécialisé en développement web en Python, avec comme framework de prédilection Python-Flask. Je suis actuellement en CDD dans le service informatique de l'IEMN de Villeneuve d'Ascq.</p></div>
                     <div class="textejustifie col-lg-4 me-auto"><p class="lead">Mes passions sont le développement web, la technologie, la musique, la lecture et le domaine du jeu vidéo. <br><br>Vous pouvez télécharger mon CV en français et en anglais ci-dessous. N'hésitez pas à me contacter pour tout renseignement !</p></div>
                 
                 </div>
