--- a/index.html
+++ b/index.html
@@ -175,6 +175,11 @@
 
 
     <div class="event">
+        <strong class="edate">Année scolaire 2023 - 2024</strong>
+        <p class="etxt">Deuxième CDD de treize mois à l'IEMN.</p>
+      </div>
+
+    <div class="event">
         <strong class="edate">Année scolaire 2022 - 2023</strong>
         <p class="etxt">CDD de treize mois à l'IEMN dans le même service que celui de mon stage.</p>
       </div>
